<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_login_singup"
    tools:context=".LoginSingup">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="185dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo_alke_wallet" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/jua"
        android:text="@string/alke_wallet"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:text="@string/el_lugar_mas_seguro_para_tu_dinero"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_action_signup"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="22dp"
        app:cardBackgroundColor="#63B8FC"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_action_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/jua"
            android:text="@string/crear_cuenta_nueva"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_action_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="#1A87DD"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
